# CaptionQA

./: .gitignore  CHANGELOG.md  README.md  _tmp_engine_test.py  datasets  pyproject.toml
.github/workflows/: ci.yml
artifacts/: qa_devmini_runs_2025-11-17.tgz
configs/: day0_deterministic.json  panorama_multiband.json  windows_defaults.json
data/: __init__.py  download.py
data/dev-mini/captioning/: preds.jsonl  refs.jsonl  samples.jsonl  summary.json
data/dev-mini/qa/: manifest.jsonl  refs.jsonl
data/eval/captioning/360x_devmini/: manifest.jsonl  preds.jsonl  refs.jsonl  summary.json
data/eval/captioning/360x_devmini_perwindow/: preds.jsonl
data/eval/captioning/360x_devmini_perwindow60/: preds.jsonl
data/eval/captioning/devmini/: preds.jsonl  summary.json
data/eval/captioning/devmini_qwen/: preds.jsonl  summary.json
data/eval/qa/360x_devmini/: confusion.json  manifest.jsonl  mismatch_report.csv  preds.jsonl  refs.jsonl  summary.json
data/eval/qa/360x_devmini_debug/: confusion.json  preds.jsonl  refs.filtered.jsonl  summary.json
data/eval/qa/360x_devmini_forceprompt/: confusion.json  preds.jsonl  summary.json
data/eval/qa/360x_devmini_forceprompt_debug/: confusion.json  preds.jsonl  refs.filtered.jsonl  summary.json
data/eval/qa/360x_devmini_foreced_justify/: confusion.json  justifications.jsonl  preds.jsonl  summary.json
data/eval/qa/360x_devmini_perwindow60/: confusion.json  manifest.jsonl  preds.jsonl  summary.json
data/eval/qa/360x_devmini_perwindow60_forcelabel/: confusion.json  preds.jsonl
data/eval/qa/360x_devmini_perwindow60_promptb/: confusion.json  preds.jsonl  summary.json
data/eval/qa/360x_devmini_perwindow60_promptc/: confusion.json  preds.jsonl  summary.json
data/eval/qa/360x_devmini_perwindow60_vfirst_forcelabel/: confusion.json  preds.jsonl  refs.filtered.jsonl  summary.json
data/eval/qa/360x_devmini_perwindow_forcelabel/: confusion.json  mismatch_report.csv  preds.jsonl  summary.json
docs/: living_roadmap.md  mkdocs.yml  windows_troubleshooting.md
docs/site/: captioning.md  index.md  qa.md
notebooks/: avqa_evaluation.ipynb  eda_360x.ipynb  quickstart.ipynb
scripts/: analyze_qa_mismatches.py  build_qa_caption_manifest.py  clean_cache.ps1  run_baselines_devmini.ps1  setup_vast_a10.sh  setup_vast_gpu.sh  train_devmini.ps1  uv_run.ps1
src/captionqa.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/captionqa/captioning/: __init__.py  __main__.py  _qwen_utils.py  baseline.py  cli.py  config.py  decoders.py  encoders.py  fusion.py  panorama.py  pipeline.py  train_captioning.py
src/captionqa/data/: __init__.py  download.py
src/captionqa/datasets/: __init__.py  x360_manifest.py  x360_tal_qa.py  x360_tal_refs.py
src/captionqa/evaluation/: __init__.py  datasets.py  metrics.py  run.py
src/captionqa/models/: __init__.py
src/captionqa/qa/: __init__.py  baseline_vqa.py  datasets.py  eval.py  model.py  normalization.py  summary.py  summary_slices.py  tokenizer.py  train.py
src/captionqa/scripts/: organize_360sr.py
src/captionqa/utils/: __init__.py  progress.py
tests/: test_avqa_zero_shot.py  test_baseline_runner.py  test_baseline_vqa_runner.py  test_caching.py  test_cli_smoke.py  test_download.py  test_fusion_decoder.py  test_metrics_sanity.py  test_panorama_projection.py  test_qa_summary.py  test_qwen_engine.py  test_sampler_flags.py  test_temporal_window_pass_through.py  test_x360_manifest.py
(+21 files in other folders)
