[project]
name = "captionqa"
version = "0.1.0"
description = "Panoramic video captioning and interactive QA system"
authors = [
  { name = "Will Romano" },
  { name = "Ethan Baird" }
]
requires-python = ">=3.9"
dependencies = [
  "torch",
  "torchvision",
  "transformers",
  "opencv-python",
  "ffmpeg-python",
  "torchaudio",
  "librosa",
  "numpy",
  "pandas",
  "matplotlib",
  "scikit-learn",
  "tqdm",
  "requests",
  "notebook",
  "einops",
  "sentencepiece",
  "accelerate",
  "peft",
  "bitsandbytes; platform_system == 'Linux'",
  "huggingface-hub[hf_xet]",
  "gdown",
  "pytest",
  "responses",
  "pytest-httpserver"
]

[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[tool.hatch.envs.default]
type = "uv"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
